alignment layout fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,11 +13,13 @@ body {
 .sidebar {
     width: 220px;
     height: 100vh;
-    /* background-color: powderblue; */
     transition: background-color .5s;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     margin-top: 0;
+    margin-right: auto;
+    /* padding-left: 3%; */
+    width: 25%
 }
 
 .navbar, .sidebar {
@@ -30,7 +32,10 @@ body {
 
 
 .firstBox {
-    margin: 5% 0 0 45%;
+    margin-top: 2%;
+    margin-left: 22%;
+    /* padding-left: 3%; */
+    width: 100%
 }
 
 ul {
@@ -43,9 +48,9 @@ ul {
     /* padding: 30px 100px; */
     background: #fff;
     border-radius: 15px;
-    /* margin: 2%; */
+    margin-right: 2%;
     display: flex;
-    width: 10rem;
+    width: 15rem;
     height: 100px;
 } 
 
@@ -94,7 +99,7 @@ ul {
     max-width: 30%;
     display: flex;
     margin-left: auto;
-    margin-right: 40%;
+    margin-right: 45%;
     width: 30%;
 }
 
